# sew

./: CMakeLists.txt  LICENSE.md  README.md
include/: sew.h  sew.hh
src/: encryption.c  key_exchange.c  key_generation.c
